--- a/compose.yml
+++ b/compose.yml
@@ -5,6 +5,8 @@ services:
     #command: "--default-authentication-plugin=mysql_native_password"
     volumes:
       - db-data:/var/lib/mysql
+    env_file:
+      - .env
     environment:
       MYSQL_ROOT_PASSWORD: root
       MYSQL_DATABASE: db_roc
@@ -26,10 +28,8 @@ services:
       WEB_CONCURRENCY: 1
       CODE_RELOAD: true
       DJANGO_SETTINGS_MODULE: config.settings
-      DB_HOST: db
-      DB_NAME: db_roc
-      DB_USER: roc_user
-      DB_PASS: roc_pass
+    env_file:
+      - .env
     volumes:
       - ./roc:/roc
     depends_on:
